clean xcodeproj and xcworkspace. updated opentok dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-Pods/
-*.swp
-*.xcuserdatad
+# Application confiiguration: substitute values in Config.plist.sample and rename to Config.plist
+Config.plist
 
-OpenTok.framework/
+xcuserdata/
+
+Pods/
